--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,6 @@
     "incremental": true,
     "esModuleInterop": true,
     "module": "esnext",
-    // "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
     "resolveJsonModule": true
@@ -23,7 +22,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "pages/api/comments.js"  ],
   "exclude": [
     "node_modules"
   ]
