--- a/.gitignore
+++ b/.gitignore
@@ -30,12 +30,10 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
-
-# env varaiable
-**/*.env
